objects/yeslocaldigital__Form_Submitted_Record__c.object
<CustomObject>
    <fields>
        <fullName>yeslocaldigital__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>yeslocaldigital__Form_Build__c</referenceTo>
        <relationshipLabel>Form Submitted Records</relationshipLabel>
        <relationshipName>Form_Submitted_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Page_Name__c</fullName>
        <formula>yeslocaldigital__Form__r.yeslocaldigital__Form_Name__c</formula>
        <label>Page Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Record__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + yeslocaldigital__Submitted_Record_Id__c , &apos;View Record&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Submitted_Record_Id__c</fullName>
        <label>Submitted Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Form Submitted Record</label>
    <listViews>
        <fullName>yeslocaldigital__All</fullName>
        <columns>NAME</columns>
        <columns>yeslocaldigital__Page_Name__c</columns>
        <columns>yeslocaldigital__Form__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>yeslocaldigital__Submitted_Record_Id__c</columns>
        <columns>yeslocaldigital__Object__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSR-{YY}-{MM}-{000000}</displayFormat>
        <label>Form Submitted Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submitted Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>